<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfile"
    android:background="@drawable/gradient_background">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="188dp"
        android:layout_height="174dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:src="@drawable/android"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="serif"
        android:text="@string/label_bongiwe_moale"
        android:textColor="#fff"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="394dp"
        android:layout_height="49dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/android"
        android:textAlignment="center"
        android:fontFamily="serif"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="394dp"
        android:layout_height="49dp"
        android:layout_marginTop="30dp"
        android:text="@string/bongiwemoale_gmail_com"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="24sp"
        android:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="394dp"
        android:layout_height="49dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:text="@string/label_phone"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="24sp"
        android:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="373dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/label_slack_id_bongiwe"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="24sp"
        android:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />



</androidx.constraintlayout.widget.ConstraintLayout>